--- a/server/src/main/resources/swagger-ui/index.html
+++ b/server/src/main/resources/swagger-ui/index.html
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost:8002/swagger.json";
+        url = "http://127.0.0.1:8002/swagger.json";
       }
 
       hljs.configure({
